# cursor-scripts

./: .env.example  .gitignore  README.md  agent_runner_lib.py  agents.yaml  agents.yaml.example  commands.yaml.example  parse_coder_logs.py  pyproject.toml  requirements.txt  run_agent.py  run_coder_agent.py  run_reviewer_agent.py  run_tests.sh
prompts/: agent_prompt.md  ctterm_coder_prompt.md  generic_agent_prompt.md  issue_fixer_prompt.md  packager_agent_prompt.md  qa_prompt.md  reviewer_prompt.md  summarize_prompt.md  verifier_prompt.md
systemd/: packager-agent.service
systemd/user/: README.md  coder-agent.service  gdd-coder-agent.service  qa-agent.service  reviewer-agent.service  verifier-agent.service
tests/: conftest.py  test_agent_runner_lib.py  test_run_agent.py
